Projeto Spring Cloud sem cloud 1.1 - projeto finalizado

--- a/greeting-service/src/main/resources/application.yml
+++ b/greeting-service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
-   name: greeting-service
+    name: greeting-service
 greeting-service:
-  greeting:"Olá"
-  default-value:"Mundo"
+  greeting: "olá"
+  default-value: "Mundo"
+  
